# foam-highlighter

./: Cargo.toml  README.md
demo/: minted-openfoam.sty  openfoam-highlight.tex
demo/of-dicts/: sampleDict
src/: main.rs
